openshift/resources/demo-geomapfish-print-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  creationTimestamp: null
  generation: 1
  labels:
    io.kompose.service: demo-geomapfish-print
  name: demo-geomapfish-print
spec:
  replicas: 1
  selector:
    io.kompose.service: demo-geomapfish-print
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: demo-geomapfish-print
    spec:
      containers:
      - image: demo-geomapfish-print
        imagePullPolicy: IfNotPresent
        name: demo-geomapfish-print
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers: []
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
