openshift/resources/demo-geomapfish-print-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: demo-geomapfish-print
  name: demo-geomapfish-print
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    protocol: TCP
    targetPort: 55555
  selector:
    io.kompose.service: demo-geomapfish-print
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
