openshift/resources/demo-geomapfish-wsgi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: demo-geomapfish-wsgi
  name: demo-geomapfish-wsgi
spec:
  ports:
  - name: "8480"
    port: 8480
    protocol: TCP
    targetPort: 80
  selector:
    io.kompose.service: demo-geomapfish-wsgi
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
